--- a/web/package.json
+++ b/web/package.json
@@ -9,6 +9,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@radix-ui/react-dialog": "^1.0.2",
     "datejs": "^1.0.0-rc3",
     "dayjs": "^1.11.7",
     "phosphor-react": "^1.4.1",
