--- a/web/package.json
+++ b/web/package.json
@@ -12,6 +12,7 @@
     "@radix-ui/react-checkbox": "^1.0.1",
     "@radix-ui/react-dialog": "^1.0.2",
     "@radix-ui/react-popover": "^1.0.3",
+    "axios": "^1.2.3",
     "clsx": "^1.2.1",
     "datejs": "^1.0.0-rc3",
     "dayjs": "^1.11.7",
